# sql_optimizer_rs

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
crates/sql_optimizer/: Cargo.toml
crates/sql_optimizer/benches/: index_suggestion.rs
crates/sql_optimizer/src/: lib.rs
crates/sqlopt/: Cargo.toml
crates/sqlopt/src/: main.rs
crates/sqlopt/tests/: e2e.rs
