[workspace]
members = ["crates/sql_optimizer", "crates/sqlopt"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sqlopt-rs/sql_optimizer_rs"

[workspace.dependencies]
sql_optimizer = { version = "0.1.0", path = "crates/sql_optimizer" }

