[package]
name = "sql_optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for sqlopt."
readme = "../../README.md"

[dependencies]
sqlparser = "0.60.0"
thiserror = "2.0.18"

[[bench]]
name = "index_suggestion"
harness = false
