[package]
name = "sqlopt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Blazingly fast SQL query analyzer CLI."
readme = "../../README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
sql_optimizer = { workspace = true }
